Limpieza de warnings en back, eliminacion de insert en toy(ya no se pueden subir juguetes sin estar logueado)